--- a/resources/assets/sass/components/helper.scss
+++ b/resources/assets/sass/components/helper.scss
@@ -6,10 +6,59 @@
   margin-bottom: 20px;
 }
 
+.m-b-xs {
+  margin-bottom: 10px;
+}
+
+.m-b-n {
+  margin-bottom: 0;
+}
+
 .m-t-md {
   margin-top: 30px;
 }
 
 .m-t-sm {
   margin-top: 20px;
+}
+
+.m-t-xs {
+  margin-top: 10px;
+}
+
+.m-t-n {
+  margin-top: 0;
+}
+
+
+.m-r-md {
+  margin-right: 30px;
+}
+
+.m-r-sm {
+  margin-right: 20px;
+}
+
+.m-r-xs {
+  margin-right: 10px;
+}
+
+.m-r-n {
+  margin-right: 0;
+}
+
+.m-l-md {
+  margin-left: 30px;
+}
+
+.m-l-sm {
+  margin-left: 20px;
+}
+
+.m-l-xs {
+  margin-left: 10px;
+}
+
+.m-l-n {
+  margin-left: 0;
 }
