--- a/resources/assets/sass/components/layout.scss
+++ b/resources/assets/sass/components/layout.scss
@@ -1,7 +1,8 @@
 a:hover {
   text-decoration: none;
 }
-.navbar-default .navbar-nav > li.active > a{
+
+.navbar-default .navbar-nav > li.active > a {
   background: transparent;
   border-bottom: 2px solid;
 }
@@ -9,10 +10,26 @@ a:hover {
 .page-title {
   font-size: 20px;
   margin-bottom: 40px;
+
+  small {
+    margin-top: 6px;
+  }
 }
 
 .btn {
   border-radius: 0;
+}
+
+.search-container {
+  position: relative;
+
+  .search-option {
+    margin-bottom: 35px;
+
+    .search-label {
+      margin-top: 5px;
+    }
+  }
 }
 
 footer {
