--- a/resources/assets/css/simple-sidebar.css
+++ b/resources/assets/css/simple-sidebar.css
@@ -5,10 +5,6 @@
  */
 /* Toggle Styles */
 
-body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
 #wrapper {
     padding-left: 0;
     -webkit-transition: all 0.5s ease;
@@ -64,29 +60,32 @@ body {
 }
 
 .sidebar-nav li {
-    text-indent: 20px;
     line-height: 40px;
     margin: 10px 0;
 }
 
 .sidebar-nav li a {
+    padding-left: 20px;
     display: block;
     text-decoration: none;
     color: #999999;
 }
 
-.sidebar-nav li a:hover {
+.sidebar-nav li:hover {
     text-decoration: none;
     color: #fff;
     background: rgba(255, 255, 255, 0.2);
 }
 
-.sidebar-nav li a.active {
+.sidebar-nav li.active {
     background: dodgerblue;
+}
+
+.sidebar-nav li.active a {
     color: white;
 }
 
-.sidebar-nav li a.active:hover {
+.sidebar-nav li.active:hover {
     background: deepskyblue;
     color: white;
 }
@@ -94,6 +93,12 @@ body {
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
     text-decoration: none;
+}
+
+.sidebar-nav li a i {
+    width: 20px;
+    text-align: center;
+    margin-right: 10px;
 }
 
 .sidebar-nav > .sidebar-brand {
