localize and fix user management

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7758,6 +7758,10 @@ a:hover {
   text-decoration: none;
 }
 
+.text-muted {
+  color: #999999;
+}
+
 .navbar-default .navbar-nav > li.active > a {
   background: transparent;
   border-bottom: 2px solid;
@@ -7770,6 +7774,11 @@ a:hover {
 
 .page-title small {
   margin-top: 6px;
+}
+
+.page-title .page-arrow {
+  color: #cccccc;
+  margin: 0 8px;
 }
 
 .btn {
