--- a/resources/assets/sass/components/admin.scss
+++ b/resources/assets/sass/components/admin.scss
@@ -4,13 +4,37 @@
   margin-top: 10px;
 }
 
+.panel-table {
+  .section-title {
+    h3 {
+      margin: 0;
+    }
+  }
+
+  .panel-body {
+    padding: 25px;
+
+    .btn {
+      margin-right: 5px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+
+  .pagination {
+    margin-bottom: 10px;
+  }
+}
+
 .navbar-toggle {
   display: inline-block;
   float: left;
   margin: 0 10px 0 0;
   padding-left: 0;
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding-top: 7px;
+  padding-bottom: 7px;
 
   .icon-bar {
     background: $text-color;
