Change Elixir to Mix

--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -1,6 +1,8 @@
 // Fonts
 @import url(https://fonts.googleapis.com/css?family=Lato:300,400,600);
 
+@import "resources/assets/css/simple-sidebar";
+
 // Variables
 @import "variables";
 
